# diagrams-python

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  environment.yml  main.py  pyproject.toml
.github/workflows/: main.yml
