[tool.poetry]
name = "direct-mail-diagrams"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Private"

[tool.poetry.dependencies]
python = "^3.10"
diagrams = "^0.22.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
